--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,8 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// Explicitly include the interaction events module
 	modImplementation "net.fabricmc.fabric-api:fabric-events-interaction-v0:${project.fabric_version}"
-	
+	modImplementation "net.fabricmc.fabric-api:fabric-item-api-v1:${project.fabric_version}"
 }
 
 processResources {
